# aga

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  compose.yml  config.example.yml  docker-compose.yml  dockerfile
agents/template/: Cargo.toml  Dockerfile
agents/template/configs/: code-generation.agent.md  code-review.agent.md  documentation.agent.md  test-generation.agent.md
agents/template/src/: agent.rs  main.rs  model.rs  tools.rs
api-server/: Cargo.toml  Dockerfile
api-server/src/: main.rs
config/: roles.yaml
config/keys/: .gitkeep
examples/game-2d/: README.md
examples/game-xo/: README.md
init-db/: 01_init.sql
nats-config/: default.conf
orchestrator/: Cargo.toml  Dockerfile
orchestrator/src/: agent_manager.rs  db.rs  main.rs  nats_client.rs
prompts/: all-agents.md
roles/: app-deployer.yml  docker-helper.yml
src/: agent.rs  config.rs  llm.rs  main.rs  server.rs  ssh_wrapper.rs  trace.rs
static/: index.html
