[package]
name = "aga"
version = "0.1.0"
edition = "2021"
description = "Легковесный Rust-фреймворк для LLM-агентов"
authors = ["aga team"]

[dependencies]
# HTTP сервер
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.11", features = ["json"] }

# Сериализация
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"



# База данных
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid"] }

# Утилиты
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
regex = "1"
futures = "0.3"
bytes = "1"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
